--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 					</div>
 					
 					<p>Сможете ли Вы доказать свою связь с родиной?</p>
-					<p>Это может понадобиться для получения учебной или рабочей визы.</p>
+					<p class="small">Это может понадобиться для получения учебной или рабочей визы.</p>
 					<div class="aboutUser__roots">
 						<div class="checkBlock">
 							<div class="check">
@@ -268,7 +268,7 @@
 					</div>
 					<div class="aboutUser__finance">
 						<p>Какими средствами Вы располагаете?<p>
-						<p>Большинство стран требует, чтобы иммигранты располагали определенной суммой на первое время.</p>
+						<p class="small">Большинство стран требует, чтобы иммигранты располагали определенной суммой на первое время.</p>
 						<select name="finance">
 							<option>Выберите значение из списка</option>
 							<option value="0">До $5 000 USD</option>
