--- a/index.html
+++ b/index.html
@@ -204,10 +204,6 @@
 								<input name="languages" type="checkbox" value="German">
 							Немецкий
 							</div>
-							<div class="check">
-								<input name="languages" type="checkbox" value="spanish">
-							Австралия
-							</div>
 						</div>
 						<div class="checkBlock">
 							<div class="check">
@@ -331,7 +327,11 @@
 				</div>
 				<div class="aboutUser__subscribe">
 					<p>Подписка на рассылку</p>
-					<input type="checkbox" name="subscribe" value="subscription" checked="checked">Вы согласны получать материалы по иммиграции (1-2 письма в неделю)
+					<div class="check">
+						<input type="checkbox" name="subscribe" value="subscription" checked="checked">
+						Вы согласны получать материалы по иммиграции (1-2 письма в неделю)
+					</div>
+					
 				</div>
 				<input class="send" type="submit" value="Оценить шансы на иммиграцию">
 				<p>При отправке формы вы соглашаетесь на обработку и хранение персональной информации.</p>
