--- a/app/index.html
+++ b/app/index.html
@@ -3,34 +3,77 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>template</title>
+    <title>illusion</title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400">
+    <link rel="stylesheet" href="css/sprite.css">
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/user.js"></script>
   </head>
   <body> 
     <div class="wrapper">
       <header class="header">
-        <div class="logo">
+        <div class="header__logo">
           <p>illusion</p>
         </div>
         <nav>
-          <ul class="menu">
-            <li><a href="">Home</a></li>
-            <li><a href="">Pages</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">Features</a></li>
-            <li><a href="">Shortcodes</a></li>
+          <ul class="header__menu">
+            <li><a href="">
+                <p>Home</p>
+                <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+            <li><a href="">
+                <p>Pages</p>
+                <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+            <li><a href=""> 
+                <p>Portfolio</p>
+                <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+            <li><a href="">
+                <p>Blog</p>
+                <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+            <li><a href=""> 
+                <p>Features</p>
+                <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+            <li><a href=""> 
+                <p>Shortcodes</p>
+                <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
           </ul>
         </nav>
-        <div class="search">
-          <input type="text">
+        <div class="header__search">
+          <button class="header__search_button"><i class="sprite sprite-search"></i></button>
+          <input class="hidden" type="text">
         </div>
       </header>
+      <div class="banner">
+        <h1>3 Column Sortable Masonry Portfolio</h1>
+        <div class="banner__breadCrumbs">
+          <ul class="banner__crumbs">
+            <li><a href="">Home</a></li>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Sortable Masonry</a></li>
+            <li><a href="">3 Columns					</a></li>
+          </ul>
+        </div>
+      </div>
     </div>
   </body>
 </html>
-<!--						+ image("image4.jpg", "image4")-->
-<!--						h3.item__header Similique sunt in culpa qui officia -->
-<!--						p.item__par Deserunt mollitia animi, id est laborum et dolorum fuga.-->
-<!--						a.item__link(href="") Read More-->
+<!--i.sprite.sprite-chevron-->
+<!--i.sprite.sprite-dribble-->
+<!--i.sprite.sprite-facebook-->
+<!--i.sprite.sprite-flick-->
+<!--i.sprite.sprite-g_-->
+<!--i.sprite.sprite-in-->
+<!--i.sprite.sprite-inst-->
+<!--i.sprite.sprite-mail-->
+<!--i.sprite.sprite-phone-->
+<!--i.sprite.sprite-pinterest-->
+<!--i.sprite.sprite-position-->
+<!--i.sprite.sprite-search-->
+<!--i.sprite.sprite-skype-->
+<!--i.sprite.sprite-twitter-->
+<!--i.sprite.sprite-vimeo-->
+<!--i.sprite.sprite-youtube
+//						+ image("image4.jpg", "image4")
+//						h3.item__header Similique sunt in culpa qui officia 
+//						p.item__par Deserunt mollitia animi, id est laborum et dolorum fuga.
+//						a.item__link(href="") Read More
+-->
