--- a/app/index.html
+++ b/app/index.html
@@ -6,15 +6,12 @@
     <title>illusion</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/sprite.css">
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/user.js"></script>
   </head>
   <body> 
     <div class="wrapper">
       <header class="header">
-        <div class="header__logo">
-          <p>illusion</p>
-        </div>
+        <div class="header__logo"><a href="">
+            <p>illusion</p></a></div>
         <nav>
           <ul class="header__menu">
             <li><a href="">
@@ -49,12 +46,42 @@
             <li><a href="">Home</a></li>
             <li><a href="">Portfolio</a></li>
             <li><a href="">Sortable Masonry</a></li>
-            <li><a href="">3 Columns					</a></li>
+            <li><a href="">3 Columns</a></li>
           </ul>
+        </div>
+      </div>
+      <div class="mainContent">
+        <ul class="mainContent__list">
+          <li><a href="">All</a></li>
+          <li><a href="">3D</a></li>
+          <li><a href="">Illustration</a></li>
+          <li><a href="">Photography</a></li>
+          <li><a href="">Web</a></li>
+        </ul>
+      </div>
+      <div class="masonryContainer">
+        <div class="grid">
+          <div class="grid-item"><img src="assets/images/img1.jpg" alt="image1">
+          </div>
+          <div class="grid-item"><img src="assets/images/img2.jpg" alt="image2">
+          </div>
+          <div class="grid-item"><img src="assets/images/img3.jpg" alt="image3">
+          </div>
+          <div class="grid-item"><img src="assets/images/img7.jpg" alt="image7">
+          </div>
+          <div class="grid-item"><img src="assets/images/img5.jpg" alt="image5">
+          </div>
+          <div class="grid-item"><img src="assets/images/img4.jpg" alt="image4">
+          </div>
+          <div class="grid-item"><img src="assets/images/img6.jpg" alt="image6">
+          </div>
         </div>
       </div>
     </div>
   </body>
+  <script src="js/jquery-3.2.1.min.js"></script>
+  <script src="js/masonry.pkgd.min.js"></script>
+  <script src="js/user.js"></script>
 </html>
 <!--i.sprite.sprite-chevron-->
 <!--i.sprite.sprite-dribble-->
