--- a/app/index.html
+++ b/app/index.html
@@ -10,42 +10,44 @@
   <body> 
     <div class="wrapper">
       <header class="header">
-        <div class="header__logo"><a href="">
-            <p>illusion</p></a></div>
-        <nav>
-          <ul class="header__menu">
-            <li><a href="">
-                <p>Home</p>
-                <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
-            <li><a href="">
-                <p>Pages</p>
-                <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
-            <li><a href=""> 
-                <p>Portfolio</p>
-                <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
-            <li><a href="">
-                <p>Blog</p>
-                <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
-            <li><a href=""> 
-                <p>Features</p>
-                <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
-            <li><a href=""> 
-                <p>Shortcodes</p>
-                <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
-          </ul>
-        </nav>
-        <div class="header__search">
-          <button class="header__search_button"><i class="sprite sprite-search"></i></button>
-          <input class="hidden" type="text">
+        <div class="fixedTop">
+          <div class="header__logo"><a href="">
+              <p>illusion</p></a></div>
+          <nav>
+            <ul class="header__menu">
+              <li><a href="">
+                  <p>Home</p>
+                  <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+              <li><a href="">
+                  <p>Pages</p>
+                  <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+              <li><a href=""> 
+                  <p>Portfolio</p>
+                  <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+              <li><a href="">
+                  <p>Blog</p>
+                  <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+              <li><a href=""> 
+                  <p>Features</p>
+                  <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+              <li><a href=""> 
+                  <p>Shortcodes</p>
+                  <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+            </ul>
+          </nav>
+          <div class="header__search">
+            <button class="header__search_button"><i class="sprite sprite-search"></i></button>
+            <input class="hidden" type="text">
+          </div>
         </div>
       </header>
       <div class="banner">
         <h1>3 Column Sortable Masonry Portfolio</h1>
         <div class="banner__breadCrumbs">
           <ul class="banner__crumbs">
-            <li><a href="">Home</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Sortable Masonry</a></li>
+            <li><a href="">Home<img src="assets/images/crumbs.png" alt="crumbs"></a></li>
+            <li><a href="">Portfolio<img src="assets/images/crumbs.png" alt="crumbs"></a></li>
+            <li><a href="">Sortable Masonry<img src="assets/images/crumbs.png" alt="crumbs"></a></li>
             <li><a href="">3 Columns</a></li>
           </ul>
         </div>
@@ -58,31 +60,87 @@
           <li><a href="">Photography</a></li>
           <li><a href="">Web</a></li>
         </ul>
+        <div class="masonryContainer">
+          <div class="grid">
+            <div class="grid-item"><img src="assets/images/img1.jpg" alt="image1">
+            </div>
+            <div class="grid-item"><img src="assets/images/img2.jpg" alt="image2">
+            </div>
+            <div class="grid-item"><img src="assets/images/img3.jpg" alt="image3">
+            </div>
+            <div class="grid-item"><img src="assets/images/img7.jpg" alt="image7">
+            </div>
+            <div class="grid-item"><img src="assets/images/img5.jpg" alt="image5">
+            </div>
+            <div class="grid-item"><img src="assets/images/img4.jpg" alt="image4">
+            </div>
+            <div class="grid-item"><img src="assets/images/img6.jpg" alt="image6">
+            </div>
+          </div>
+        </div><a class="load" href="">Load More</a>
       </div>
-      <div class="masonryContainer">
-        <div class="grid">
-          <div class="grid-item"><img src="assets/images/img1.jpg" alt="image1">
+      <footer class="footer">
+        <div class="up"> <a href="#"><i class="sprite sprite-up toup"></i></a></div>
+        <div class="footerWrap">
+          <div class="aboutUs col-3">
+            <h2>Shortly About Us</h2>
+            <p>Vivamus eget nibh. Etiam cursus leo vel metus. Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia. Suspendisse sollicitudin velit sed leo. </p>
           </div>
-          <div class="grid-item"><img src="assets/images/img2.jpg" alt="image2">
+          <div class="contact col-2">
+            <h2>Contact Us</h2><i class="sprite sprite-phone"></i>
+            <p>(123)-456-7890</p>
+            <div class="clear"></div><i class="sprite sprite-mail"></i>
+            <p>info@companyname.com</p>
+            <div class="clear"></div><i class="sprite sprite-skype"></i>
+            <p>skype.name</p>
           </div>
-          <div class="grid-item"><img src="assets/images/img3.jpg" alt="image3">
+          <div class="address col-2"><i class="sprite sprite-position"></i>
+            <p>8901 Marmora Road,<br>Glasgow, D0489GR.</p>
+            <div class="clear"></div><a href="">Open in Google Maps</a>
           </div>
-          <div class="grid-item"><img src="assets/images/img7.jpg" alt="image7">
-          </div>
-          <div class="grid-item"><img src="assets/images/img5.jpg" alt="image5">
-          </div>
-          <div class="grid-item"><img src="assets/images/img4.jpg" alt="image4">
-          </div>
-          <div class="grid-item"><img src="assets/images/img6.jpg" alt="image6">
+          <div class="connect col-2">
+            <h2>Stay Connected</h2><a href=""><i class="sprite sprite-facebook facebook"></i></a><a href=""><i class="sprite sprite-twitter twitter"></i></a><a href=""><i class="sprite sprite-g_ g_"></i></a><a href=""><i class="sprite sprite-pinterest pinterest"></i></a><a href=""><i class="sprite sprite-drible drible"></i></a><a href=""><i class="sprite sprite-flick flick"></i></a><a href=""><i class="sprite sprite-youtube youtube"></i></a><a href=""><i class="sprite sprite-vimeo vimeo"></i></a><a href=""><i class="sprite sprite-inst inst"></i></a><a href=""><i class="sprite sprite-in in"></i></a>
           </div>
         </div>
-      </div>
+        <div class="arr">
+          <p>© 2014 illusion. All Rights Reserved.</p>
+        </div>
+      </footer>
     </div>
   </body>
   <script src="js/jquery-3.2.1.min.js"></script>
   <script src="js/masonry.pkgd.min.js"></script>
   <script src="js/user.js"></script>
 </html>
+<!--i.sprite.sprite-chevron-->
+<!--i.sprite.sprite-crumbs-->
+<!--i.sprite.sprite-drible-->
+<!--i.sprite.sprite-dribleC-->
+<!--i.sprite.sprite-facebook-->
+<!--i.sprite.sprite-facebookC-->
+<!--i.sprite.sprite-flick-->
+<!--i.sprite.sprite-flick_-->
+<!--i.sprite.sprite-g_-->
+<!--i.sprite.sprite-g_C-->
+<!--i.sprite.sprite-in-->
+<!--i.sprite.sprite-inC-->
+<!--i.sprite.sprite-inst-->
+<!--i.sprite.sprite-instC-->
+<!--i.sprite.sprite-mail-->
+<!--i.sprite.sprite-phone-->
+<!--i.sprite.sprite-pinterest-->
+<!--i.sprite.sprite-pinterestC-->
+<!--i.sprite.sprite-position-->
+<!--i.sprite.sprite-search-->
+<!--i.sprite.sprite-skype-->
+<!--i.sprite.sprite-twitter-->
+<!--i.sprite.sprite-twitterC-->
+<!--i.sprite.sprite-up-->
+<!--i.sprite.sprite-upC-->
+<!--i.sprite.sprite-vimeo-->
+<!--i.sprite.sprite-vimeoC-->
+<!--i.sprite.sprite-youtube-->
+<!--i.sprite.sprite-youtubeC-->
 <!--i.sprite.sprite-chevron-->
 <!--i.sprite.sprite-dribble-->
 <!--i.sprite.sprite-facebook-->
@@ -99,8 +157,4 @@
 <!--i.sprite.sprite-twitter-->
 <!--i.sprite.sprite-vimeo-->
 <!--i.sprite.sprite-youtube
-//						+ image("image4.jpg", "image4")
-//						h3.item__header Similique sunt in culpa qui officia 
-//						p.item__par Deserunt mollitia animi, id est laborum et dolorum fuga.
-//						a.item__link(href="") Read More
 -->
