--- a/app/index.html
+++ b/app/index.html
@@ -17,22 +17,130 @@
             <ul class="header__menu">
               <li><a href="">
                   <p>Home</p>
-                  <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <div class="chevron"><i class="sprite sprite-chevron"></i></div></a>
+                <ul class="subMenu">
+                  <li><a href=""> 
+                      <p>Classic</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <li><a href="">
+                      <p>Sortable grid with text</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <li><a href="">
+                      <p>Sortable grid without text</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <li><a href="">
+                      <p>Sortable masonry</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <li><a href=""> 
+                      <p>Single project pages</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                </ul>
+              </li>
               <li><a href="">
                   <p>Pages</p>
-                  <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <div class="chevron"><i class="sprite sprite-chevron"></i></div></a>
+                <ul class="subMenu">
+                  <li><a href=""> 
+                      <p>Classic</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <li><a href="">
+                      <p>Sortable grid with text</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <li><a href="">
+                      <p>Sortable grid without text</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <li><a href="">
+                      <p>Sortable masonry</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <li><a href=""> 
+                      <p>Single project pages</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                </ul>
+              </li>
               <li><a href=""> 
                   <p>Portfolio</p>
-                  <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <div class="chevron"><i class="sprite sprite-chevron"></i></div></a>
+                <ul class="subMenu">
+                  <li><a href=""> 
+                      <p>Classic</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <li><a href="">
+                      <p>Sortable grid with text</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <li><a href="">
+                      <p>Sortable grid without text</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <li><a href="">
+                      <p>Sortable masonry</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <li><a href=""> 
+                      <p>Single project pages</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                </ul>
+              </li>
               <li><a href="">
                   <p>Blog</p>
-                  <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <div class="chevron"><i class="sprite sprite-chevron"></i></div></a>
+                <ul class="subMenu">
+                  <li><a href=""> 
+                      <p>Classic</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <li><a href="">
+                      <p>Sortable grid with text</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <li><a href="">
+                      <p>Sortable grid without text</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <li><a href="">
+                      <p>Sortable masonry</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <li><a href=""> 
+                      <p>Single project pages</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                </ul>
+              </li>
               <li><a href=""> 
                   <p>Features</p>
-                  <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <div class="chevron"><i class="sprite sprite-chevron"></i></div></a>
+                <ul class="subMenu">
+                  <li><a href=""> 
+                      <p>Classic</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <li><a href="">
+                      <p>Sortable grid with text</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <li><a href="">
+                      <p>Sortable grid without text</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <li><a href="">
+                      <p>Sortable masonry</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <li><a href=""> 
+                      <p>Single project pages</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                </ul>
+              </li>
               <li><a href=""> 
                   <p>Shortcodes</p>
-                  <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <div class="chevron"><i class="sprite sprite-chevron"></i></div></a>
+                <ul class="subMenu">
+                  <li><a href=""> 
+                      <p>Classic</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <li><a href="">
+                      <p>Sortable grid with text</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <li><a href="">
+                      <p>Sortable grid without text</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <li><a href="">
+                      <p>Sortable masonry</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                  <li><a href=""> 
+                      <p>Single project pages</p>
+                      <div class="chevron"><i class="sprite sprite-chevron"></i></div></a></li>
+                </ul>
+              </li>
             </ul>
           </nav>
           <div class="header__search">
