--- a/app/index.html
+++ b/app/index.html
@@ -248,21 +248,5 @@
 <!--i.sprite.sprite-vimeo-->
 <!--i.sprite.sprite-vimeoC-->
 <!--i.sprite.sprite-youtube-->
-<!--i.sprite.sprite-youtubeC-->
-<!--i.sprite.sprite-chevron-->
-<!--i.sprite.sprite-dribble-->
-<!--i.sprite.sprite-facebook-->
-<!--i.sprite.sprite-flick-->
-<!--i.sprite.sprite-g_-->
-<!--i.sprite.sprite-in-->
-<!--i.sprite.sprite-inst-->
-<!--i.sprite.sprite-mail-->
-<!--i.sprite.sprite-phone-->
-<!--i.sprite.sprite-pinterest-->
-<!--i.sprite.sprite-position-->
-<!--i.sprite.sprite-search-->
-<!--i.sprite.sprite-skype-->
-<!--i.sprite.sprite-twitter-->
-<!--i.sprite.sprite-vimeo-->
-<!--i.sprite.sprite-youtube
+<!--i.sprite.sprite-youtubeC
 -->
