--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
       <header class="header">
         <div class="fixedTop">
           <div class="header__logo"><a href="">
-              <p>illusion</p></a></div>
+              <p>illusion</p></a></div><span class="header__menuButton"></span>
           <nav>
             <ul class="header__menu">
               <li><a href="">
@@ -145,7 +145,7 @@
           </nav>
           <div class="header__search">
             <button class="header__search_button"><i class="sprite sprite-search"></i></button>
-            <input class="hidden" type="text">
+            <input class="header__search_area" type="text">
           </div>
         </div>
       </header>
@@ -190,11 +190,11 @@
       <footer class="footer">
         <div class="up"> <a href="#"><i class="sprite sprite-up toup"></i></a></div>
         <div class="footerWrap">
-          <div class="aboutUs col-3">
+          <div class="aboutUs">
             <h2>Shortly About Us</h2>
             <p>Vivamus eget nibh. Etiam cursus leo vel metus. Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia. Suspendisse sollicitudin velit sed leo. </p>
           </div>
-          <div class="contact col-2">
+          <div class="contact">
             <h2>Contact Us</h2><i class="sprite sprite-phone"></i>
             <p>(123)-456-7890</p>
             <div class="clear"></div><i class="sprite sprite-mail"></i>
@@ -202,11 +202,11 @@
             <div class="clear"></div><i class="sprite sprite-skype"></i>
             <p>skype.name</p>
           </div>
-          <div class="address col-2"><i class="sprite sprite-position"></i>
+          <div class="address"><i class="sprite sprite-position"></i>
             <p>8901 Marmora Road,<br>Glasgow, D0489GR.</p>
             <div class="clear"></div><a href="">Open in Google Maps</a>
           </div>
-          <div class="connect col-2">
+          <div class="connect">
             <h2>Stay Connected</h2><a href=""><i class="sprite sprite-facebook facebook"></i></a><a href=""><i class="sprite sprite-twitter twitter"></i></a><a href=""><i class="sprite sprite-g_ g_"></i></a><a href=""><i class="sprite sprite-pinterest pinterest"></i></a><a href=""><i class="sprite sprite-drible drible"></i></a><a href=""><i class="sprite sprite-flick flick"></i></a><a href=""><i class="sprite sprite-youtube youtube"></i></a><a href=""><i class="sprite sprite-vimeo vimeo"></i></a><a href=""><i class="sprite sprite-inst inst"></i></a><a href=""><i class="sprite sprite-in in"></i></a>
           </div>
         </div>
